@@ -7,7 +7,7 @@ s!\.o:!.lo:!
 s! @BFD_H@!!g
 s!@INCDIR@!$(INCDIR)!g
 s!@SRCDIR@/!!g
-s!hosts/[^ ]*\.h ! !g
+s! hosts/[^ ]*\.h! !g
 s/ sysdep.h//g
 s! \.\./bfd/sysdep.h!!g
 s/ libbfd.h//g
